      created is unique.
    * The builddir is no longer allowed to appear in ELF RPATHs.
    * The build documentation strings have been significantly updated
      to document the fact that for most strings, a relative path
      is relative to the builddir, but an absolute path is relative
      to the destdir.
    * The ManualConfigure action now sets the standard Configure
      environment.

Changes in 0.70.2:
  o Client Changes (conary)
    * GnuPG compatible trust metrics for OpenPGP Keys now exists. This
      makes it possible for conary clients to refuse troves that
      aren't properly trusted. The metrics currently in place mimic
      gpg behavior.
    * Running "conary update" in a directory that does not exist no
      longer fails with an error (bugzilla #212).  Note that "cvc
      update" still requires that the current working directory exists
      of course.
    * HTTP error conditions are handled more gracefully when commiting
      a change set. (bugzilla #334)
    * conary more reliably sets a non-zero exit status when an error
      occurs. (bugzilla #312)
    * When performing an update of a group that adds a trove foo,
      search the system for a older version of foo to replace if the
      original update command found a replacement by searching the
      system.
    * New option, "conary update-conary" has been added in an attempt
      to provide a workaround for future drastic protocol revisions
      such as what happened for 0.70 
    * Methods for parsing command line update request and changeset requests
      have been added to conaryclient.cmdline
    * A metric for the distance between arbitrary versions on different
      branches has been added, and the code which matches troves changes
      between collections uses this code to give well-defined matches
      for all cases.
    * Rollbacks are now listed with the most recent on top
    * Troves which a group operation tries to remove will be left behind